Dropped fix for overlay-scrollbars

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -73,12 +73,6 @@ GtkClutterOffscreen {
     color: @theme_fg_color;
 }
 
-* {
-    /* inherit colors from parent */
-    color: inherit;
-    background-color: inherit;
-}
-
 *:selected,
 *:selected:focus {
     background-color: @theme_selected_bg_color;
